--- a/h2-database/pom.xml
+++ b/h2-database/pom.xml
@@ -5,10 +5,9 @@
      <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.java.spring</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>h2-database</groupId>
