--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,13 @@
             <version>5.2.6.RELEASE</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.0-SNAPSHOT</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
