--- a/h2-database/pom.xml
+++ b/h2-database/pom.xml
@@ -44,4 +44,13 @@
              <version>2.3.0.RELEASE</version>
          </dependency> -->
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.0-SNAPSHOT</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
