--- a/rest-microservices/pom.xml
+++ b/rest-microservices/pom.xml
@@ -18,4 +18,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.0-SNAPSHOT</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
