--- a/rest-microservices/pom.xml
+++ b/rest-microservices/pom.xml
@@ -23,7 +23,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.5.0-SNAPSHOT</version>
+                <version>2.4.2</version>
             </plugin>
         </plugins>
     </build>
