--- a/h2-database/pom.xml
+++ b/h2-database/pom.xml
@@ -10,9 +10,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>h2-database</groupId>
     <artifactId>h2-database</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${parent.version}</version>
 
     <dependencies>
         <dependency>
