--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.2.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>h2-database</groupId>
+            <artifactId>h2-database</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
