Added new Unit Tests and code refactored

--- a/rest-microservices/src/test/resources/datasets/employee.yml
+++ b/rest-microservices/src/test/resources/datasets/employee.yml
@@ -9,3 +9,9 @@ employee:
     lastName: "Das"
     email: "Das@gmail.com"
     phoneNumber: "123-456-123"
+  - id: 3
+    firstName: "Ghansraj"
+    lastName: "DasJi"
+    email: "Das@gmail.com"
+    phoneNumber: "123-456-123"
+    
