--- a/rest-microservices/src/main/resources/application.properties
+++ b/rest-microservices/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.main.banner-mode=off
 
-server.port=8181
+spring.profiles.active=dev
 
+server.port=8181
+#spring.h2.console.enabled=true
 db.username=sa
 db.password=
 db.url=jdbc:h2:tcp://localhost:9092/mem:mydb
