--- a/rest-microservices/src/test/resources/application.properties
+++ b/rest-microservices/src/test/resources/application.properties
@@ -1,16 +1,20 @@
-spring.main.banner-mode=off
+# spring.datasource.x
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+#spring.datasource.username=sa
+#spring.datasource.password=sa
 
-server.port=8181
+# hibernate.X
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+#hibernate.show_sql=true
+#hibernate.hbm2ddl.auto=create-drop
+#hibernate.cache.use_second_level_cache=true
+#hibernate.cache.use_query_cache=true
+#hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
-db.username=sa
-db.password=
-db.url=jdbc:h2:tcp://localhost:9092/mem:mydb
-db.driver=org.h2.Driver
-hibernate.dialect: org.hibernate.dialect.H2Dialect
-hibernate.show_sql: true
-hibernate.hbm2ddl.auto: validate
-entitymanager.packagesToScan: com.nwt.entity
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=migrated_users.sql, import_books.sql
+#spring.datasource.data=import_*_users.sql
 
-#spring.jpa.hibernate.ddl-auto=none
-logging.level.org.springframework=INFO
+spring.profiles.active=test
 
+#org.dbunit.database.IMetadataHandler.implClassName=org.dbunit.ext.mysql.MySqlMetadataHandler
